--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -78,7 +78,7 @@ jobs:
              echo "Error: JSON array is empty"
              exit 1
            fi
-         echo 'repositories=$formatted_list' >> "$GITHUB_OUTPUT"
+         echo "repositories=$formatted_list" >> "$GITHUB_OUTPUT"
 
       - name: Define Colors
         id: colors
