--- a/.github/workflows/completeflow.yml
+++ b/.github/workflows/completeflow.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: get user-id
         run: |
-          user_id=(curl -s https://api.github.com/users/Sakthi770 | jq '.id')
+          user_id=$(curl -s https://api.github.com/users/Sakthi770 | jq '.id')
           echo "userid=$user_id" >> "$GITHUB_OUTPUT"
       - name: List Repositories using octokit
         id: repository
