--- a/.github/workflows/completeflow.yml
+++ b/.github/workflows/completeflow.yml
@@ -27,7 +27,7 @@ jobs:
           echo "RepoList:$Repolist"
          
           formatted_repo_list=$(echo "$fullname" | sed 's/^/"/;s/$/"/' | paste -sd, - | sed 's/^/[/' | sed 's/$/]/')
-          # echo "$formatted_repo_list"
+          echo "$formatted_repo_list"
           if [ -z "$formatted_repo_list" ]; then
              echo "Error: Repo List is empty"
              exit 1
