--- a/.github/workflows/completeflow.yml
+++ b/.github/workflows/completeflow.yml
@@ -26,7 +26,7 @@ jobs:
           Repolist=$(echo "$response" | jq -r '.items[] | .full_name')
           echo "RepoList:$Repolist"
          
-          formatted_repo_list=$(echo "$fullname" | sed 's/^/"/;s/$/"/' | paste -sd, - | sed 's/^/[/' | sed 's/$/]/')
+          formatted_repo_list=$(echo "$Repolist" | sed 's/^/"/;s/$/"/' | paste -sd, - | sed 's/^/[/' | sed 's/$/]/')
           echo "$formatted_repo_list"
           if [ -z "$formatted_repo_list" ]; then
              echo "Error: Repo List is empty"
