--- a/.github/workflows/completeflow.yml
+++ b/.github/workflows/completeflow.yml
@@ -61,7 +61,7 @@ jobs:
               -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/${{ matrix.repo }}/environments/${{ matrix.environments }} \
-              -d '$reviewers'
+              -d "$reviewers"
               
          - name: Creating branch policy
            if: ${{ matrix.environments != 'dit' }}
