--- a/.github/workflows/completeflow.yml
+++ b/.github/workflows/completeflow.yml
@@ -51,9 +51,9 @@ jobs:
            run: |
             echo "Creating environment"
             if [ "${{ matrix.environments }}" == "dit" ]; then
-              reviewers='{}'
+              request_body='{}'
             else
-              reviewers="{"prevent_self_review":false,"reviewers":[{"type":"User","id":$userid}],"deployment_branch_policy":{"protected_branches":false,"custom_branch_policies":true}}"
+              request_body='{"prevent_self_review":false,"reviewers":[{"type":"User","id":$userid}],"deployment_branch_policy":{"protected_branches":false,"custom_branch_policies":true}}'
             fi
             curl -L \
               -X PUT \
@@ -61,7 +61,7 @@ jobs:
               -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/${{ matrix.repo }}/environments/${{ matrix.environments }} \
-              -d "$reviewers"
+              -d "$request_body"
               
          - name: Creating branch policy
            if: ${{ matrix.environments != 'dit' }}
