--- a/.github/workflows/completeflow.yml
+++ b/.github/workflows/completeflow.yml
@@ -52,16 +52,22 @@ jobs:
             echo "Creating environment"
             if [ "${{ matrix.environments }}" == "dit" ]; then
               request_body='{}'
-            else
-              request_body='{\"prevent_self_review\":false,\"reviewers\":[{"type":"User","id":$userid}],\"deployment_branch_policy\":{\"protected_branches\":false,\"custom_branch_policies\":true}}'
-            fi
-            curl -L \
+              curl -L \
               -X PUT \
               -H "Accept: application/vnd.github+json" \
               -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/${{ matrix.repo }}/environments/${{ matrix.environments }} \
               -d "$request_body"
+            else
+              curl -L \
+              -X PUT \
+              -H "Accept: application/vnd.github+json" \
+              -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              https://api.github.com/repos/${{ matrix.repo }}/environments/${{ matrix.environments }} \
+              -d '{"prevent_self_review":false,"reviewers":[{"type":"User","id":105368111}],"deployment_branch_policy":{"protected_branches":false,"custom_branch_policies":true}}'
+            fi
               
          - name: Creating branch policy
            if: ${{ matrix.environments != 'dit' }}
