--- a/.github/workflows/completeflow.yml
+++ b/.github/workflows/completeflow.yml
@@ -43,7 +43,8 @@ jobs:
        strategy:
           matrix:
              repo: ${{ fromJson(needs.repo-list.outputs.repositories) }}
-             environments: [dit,uat,prod]
+             environments: [dit]
+             # environments: [dit,uat,prod]
        steps:
          - name: Repo name
            run: echo "Running task in ${{ matrix.repo }}"
@@ -52,33 +53,32 @@ jobs:
             echo "Creating environment"
             if [ "${{ matrix.environments }}" == "dit" ]; then
               request_body='{}'
-              curl -L \
-              -X PUT \
-              -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
-              -H "X-GitHub-Api-Version: 2022-11-28" \
-              https://api.github.com/repos/${{ matrix.repo }}/environments/${{ matrix.environments }} \
-              -d "$request_body"
             else
-              curl -L \
-              -X PUT \
-              -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
-              -H "X-GitHub-Api-Version: 2022-11-28" \
-              https://api.github.com/repos/${{ matrix.repo }}/environments/${{ matrix.environments }} \
-              -d '{"prevent_self_review":false,"reviewers":[{"type":"User","id":105368111}],"deployment_branch_policy":{"protected_branches":false,"custom_branch_policies":true}}'
+              formatting_request_body="{"wait_timer":1,"prevent_self_review":false,"reviewers":[{"type":"User","id":$userid}],"deployment_branch_policy":{"protected_branches":false,"custom_branch_policies":true}}"
+              request_body="$formatting_request_body"
             fi
+
+            echo "$formatting_request_body"
+            echo "request_body"
+
+         #    curl -L \
+         #      -X PUT \
+         #      -H "Accept: application/vnd.github+json" \
+         #      -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
+         #      -H "X-GitHub-Api-Version: 2022-11-28" \
+         #      https://api.github.com/repos/${{ matrix.repo }}/environments/${{ matrix.environments }} \
+         #      -d "$request_body"
               
-         - name: Creating branch policy
-           if: ${{ matrix.environments != 'dit' }}
-           run: | 
-            echo "Creating deployment branch policy"
-            curl -L \
-              -X POST \
-              -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
-              -H "X-GitHub-Api-Version: 2022-11-28" \
-              https://api.github.com/repos/${{ matrix.repo }}/environments/workflowenv/deployment-branch-policies \
-              -d '{"name":"master","type":"branch"}'
+         # - name: Creating branch policy
+         #   if: ${{ matrix.environments != 'dit' }}
+         #   run: | 
+         #    echo "Creating deployment branch policy"
+         #    curl -L \
+         #      -X POST \
+         #      -H "Accept: application/vnd.github+json" \
+         #      -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
+         #      -H "X-GitHub-Api-Version: 2022-11-28" \
+         #      https://api.github.com/repos/${{ matrix.repo }}/environments/workflowenv/deployment-branch-policies \
+         #      -d '{"name":"master","type":"branch"}'
           
     
