--- a/.github/workflows/completeflow.yml
+++ b/.github/workflows/completeflow.yml
@@ -42,11 +42,11 @@ jobs:
        environment: prod
        env:
         userid: ${{needs.repo-list.outputs.userid}}         
-       # strategy:
-       #    matrix:
-       #       repo: ${{ fromJson(needs.repo-list.outputs.repositories) }}
-       #       environments: [uat]
-       #       # environments: [dit,uat,prod]
+       strategy:
+          matrix:
+             repo: ${{ fromJson(needs.repo-list.outputs.repositories) }}
+             environments: [uat]
+             # environments: [dit,uat,prod]
        steps:
          - name: Repo name
            run: |
@@ -56,34 +56,30 @@ jobs:
          - name: Creating Environment
            run: |
             echo "Creating environment"
-            # if [ "${{ matrix.environments }}" == "dit" ]; then
-            #   request_body='{}'
-            # else
-              formatting_request_body="{"wait_timer":1,"prevent_self_review":false,"reviewers":[{"type":"User","id":$userid}],"deployment_branch_policy":{"protected_branches":false,"custom_branch_policies":true}}"
-              request_body="$formatting_request_body"
-            # fi
+            if [ "${{ matrix.environments }}" == "dit" ]; then
+              request_body='{}'
+            else
+              request_body="{"wait_timer":1,"prevent_self_review":false,"reviewers":[{"type":"User","id":$userid}],"deployment_branch_policy":{"protected_branches":false,"custom_branch_policies":true}}"
+            fi
 
-            echo "$formatting_request_body"
-            echo "request_body"
-
-         #    curl -L \
-         #      -X PUT \
-         #      -H "Accept: application/vnd.github+json" \
-         #      -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
-         #      -H "X-GitHub-Api-Version: 2022-11-28" \
-         #      https://api.github.com/repos/${{ matrix.repo }}/environments/${{ matrix.environments }} \
-         #      -d "$request_body"
+            curl -L \
+              -X PUT \
+              -H "Accept: application/vnd.github+json" \
+              -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              https://api.github.com/repos/${{ matrix.repo }}/environments/${{ matrix.environments }} \
+              -d "$request_body"
               
-         # - name: Creating branch policy
-         #   if: ${{ matrix.environments != 'dit' }}
-         #   run: | 
-         #    echo "Creating deployment branch policy"
-         #    curl -L \
-         #      -X POST \
-         #      -H "Accept: application/vnd.github+json" \
-         #      -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
-         #      -H "X-GitHub-Api-Version: 2022-11-28" \
-         #      https://api.github.com/repos/${{ matrix.repo }}/environments/workflowenv/deployment-branch-policies \
-         #      -d '{"name":"master","type":"branch"}'
+         - name: Creating branch policy
+           if: ${{ matrix.environments != 'dit' }}
+           run: | 
+            echo "Creating deployment branch policy"
+            curl -L \
+              -X POST \
+              -H "Accept: application/vnd.github+json" \
+              -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              https://api.github.com/repos/${{ matrix.repo }}/environments/workflowenv/deployment-branch-policies \
+              -d '{"name":"master","type":"branch"}'
           
     
