--- a/.github/workflows/completeflow.yml
+++ b/.github/workflows/completeflow.yml
@@ -17,7 +17,7 @@ jobs:
           user_id=$(curl -s https://api.github.com/users/Sakthi770 | jq '.id')
           echo "userid=$user_id" >> "$GITHUB_OUTPUT"
           echo $user_id
-      - name: List Repositories using octokit
+      - name: List Repositories
         id: repository
         run: |
           response=$(curl -L \
@@ -45,8 +45,7 @@ jobs:
        strategy:
           matrix:
              repo: ${{ fromJson(needs.repo-list.outputs.repositories) }}
-             environments: [uat]
-             # environments: [dit,uat,prod]
+             environments: [dit,uat,prod]
        steps:
          - name: Repo name
            run: |
