--- a/.github/workflows/completeflow.yml
+++ b/.github/workflows/completeflow.yml
@@ -79,7 +79,7 @@ jobs:
               -H "Accept: application/vnd.github+json" \
               -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
-              https://api.github.com/repos/${{ matrix.repo }}/environments/workflowenv/deployment-branch-policies \
+              https://api.github.com/repos/${{ matrix.repo }}/environments/${{ matrix.environments }}/deployment-branch-policies \
               -d '{"name":"master","type":"branch"}'
           
     
