--- a/.github/workflows/completeflow.yml
+++ b/.github/workflows/completeflow.yml
@@ -8,7 +8,7 @@ jobs:
    repo-list:
     runs-on: ubuntu-latest
     outputs:
-         repositories: ${{ steps.jsonrepolist.outputs.repositories }}
+         repositories: ${{ steps.repository.outputs.repositories }}
          userid: ${{ steps.userdetails.outputs.userid }}
     steps:
       - name: get user-id
@@ -25,28 +25,23 @@ jobs:
            -H "Authorization: Bearer ${{secrets.PAT_TOKEN}}" \
            -H "X-GitHub-Api-Version: 2022-11-28" \
             "https://api.github.com/search/repositories?q=user:Sakthi770")
-          REPOLIST=$(echo "$response" | jq -r '.items[] | .full_name')
-      - name: check environments in repo
-        id: environmentcheck
-        run: |
-          for repo in $REPOLIST; do
+          Repolist=$(echo "$response" | jq -r '.items[] | .full_name')
+
+          for repo in $Repolist; do
             echo "$repo"
             environments=$(curl -s -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/$repo/environments | jq '.total_count')
             if [ "$environments" != "null" ] && [ "$environments" -eq 0 ]; then
-              REPOS_WITHOUT_ENVS+=("$repo")
+              repos_without_envs+=("$repo")
             fi
           done
-          echo "REPOS_WITHOUT_ENVS=$REPOS_WITHOUT_ENVS" >> $GITHUB_ENV
-      - name: Json formatting
-        id: jsonrepolist
-        run: |
+         
           formatted_repo_list=$(echo "$repos_without_envs" | sed 's/^/"/;s/$/"/' | paste -sd, - | sed 's/^/[/' | sed 's/$/]/')
           echo "$formatted_repo_list"
           if [ -z "$formatted_repo_list" ]; then
              echo "Error: Repo List is empty"
              exit 1
-          fi
-          echo "repositories=$formatted_repo_list" >> "$GITHUB_OUTPUT"
+           fi
+           echo "repositories=$formatted_repo_list" >> "$GITHUB_OUTPUT"
         
    Add-Environments:
        needs: repo-list
