--- a/.github/workflows/checkpagination.yml
+++ b/.github/workflows/checkpagination.yml
@@ -1,4 +1,4 @@
-name: complete environment
+name: check pagination
 
 on:
  push:
@@ -7,9 +7,6 @@ on:
 jobs:
    repo-list:
     runs-on: ubuntu-latest
-    outputs:
-         repositories: ${{ steps.repository.outputs.repositories }}
-         userid: ${{ steps.userdetails.outputs.userid }}
     steps:
       - name: get user-id
         id: userdetails
@@ -24,7 +21,7 @@ jobs:
            -H "Accept: application/vnd.github+json" \
            -H "Authorization: Bearer ${{secrets.PAT_TOKEN}}" \
            -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/search/repositories?q=user:Sakthi770?per_page=2
+            "https://api.github.com/search/repositories?q=user:Sakthi770?per_page=2"
           response=$(curl -L \
            -H "Accept: application/vnd.github+json" \
            -H "Authorization: Bearer ${{secrets.PAT_TOKEN}}" \
