--- a/.github/workflows/checkpagination.yml
+++ b/.github/workflows/checkpagination.yml
@@ -25,6 +25,8 @@ jobs:
               -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               "https://api.github.com/search/repositories?q=user:Sakthi770?per_page=$per_page&page=$page")
+              
+            echo "$response"
             
             echo "$response" | grep -i "Link:" | grep -oP '(?<=<)[^>]+(?=>; rel="next")' | read next_page
             
